# Tour_chain

./: .gitignore  Anchor.toml  BUILD_FIX_SUMMARY.md  CANVA_QUICK_START.md  DEPLOYMENT_READY.md  POWERPOINT_TEMPLATE_GUIDE.md  PRESENTATION_INTERACTIVE_GUIDE.md  PROJECT_PROGRESS_REPORT.md  Prompts.md  QUICK_SCREENSHOT_CHECKLIST.md  README.md  SCREENSHOT_GUIDE.md  TOURCHAIN_PRESENTATION.md  TOURCHAIN_SLIDES_CONTENT.md  package-lock.json  package.json  tourchain-audit (21).md
.github/workflows/: ci.yml
.vercel/: project.json
apps/vite-backup/: package-lock.json
apps/web/: .env.example  AI_PLANNER_SETUP.md  COMPREHENSIVE_PLANNER.md  ESCROW_QUICK_START.md  ESCROW_TESTING_GUIDE.md  GUIDE_WALLET_SETUP.md  SETUP_GEMINI.md  SUPABASE_SETUP.md  WALLET_ERROR_EXPLAINED.md  next.config.ts  package-lock.json  package.json
backend/: fix_pending_badges.js  package.json
backend/scripts/: seedDemo.js
backend/src/: index.js
contracts/: Anchor.toml  BUILD_GUIDE.md
frontend/: package.json
frontend/src/: App.jsx  main.jsx
programs/booking_escrow/: Cargo.toml
programs/carbon_credits/: Cargo.toml
programs/dao_governance/: Cargo.toml
programs/experience_nft/: Cargo.toml
programs/loyalty_token/: Cargo.toml
programs/pricing_oracle/: Cargo.toml
programs/pricing_oracle/src/: lib.rs
programs/route_registry/: Cargo.toml
programs/sos_insurance/: Cargo.toml
programs/sos_insurance/src/: lib.rs
programs/tourchain_escrow/: Cargo.toml
programs/tourchain_proof/: Cargo.toml
programs/tourchain_reputation/: Cargo.toml
scripts/: init-merkle-tree.ts
sdk/: package.json
(+132 files in other folders)
