[package]
name = "pricing_oracle"
version = "0.1.0"
description = "TourismChain Nepal: Dynamic Pricing Oracle"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pricing_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
